// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> renders 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={Object {}}
    horizontal={true}
    onLayout={[Function]}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {caption} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#9b9b9b",
          "fontFamily": undefined,
          "fontSize": 14,
          "lineHeight": 14.84,
        }
      }
    >
      Hello World
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={Object {}}
    horizontal={true}
    onLayout={[Function]}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {dataSource} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={Object {}}
    horizontal={true}
    onLayout={[Function]}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {itemMargin} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={Object {}}
    horizontal={true}
    onLayout={[Function]}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {momentum} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={Object {}}
    horizontal={true}
    onLayout={[Function]}
    onScroll={[Function]}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {navigation} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 15,
        "display": "flex",
        "flexDirection": "row",
        "height": 0,
        "justifyContent": "space-between",
        "left": 0,
        "overflow": "visible",
        "position": "absolute",
        "width": "50%",
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "margin": 5,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#4a4a4a",
            "borderRadius": 3,
            "display": "flex",
            "flexDirection": "row",
            "height": 30,
            "justifyContent": "center",
            "left": -16,
            "paddingHorizontal": 10,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/left.png",
            }
          }
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "margin": 5,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#4a4a4a",
            "borderRadius": 3,
            "display": "flex",
            "flexDirection": "row",
            "height": 30,
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "position": "absolute",
            "right": -16,
            "top": 0,
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../components/Icon/assets/right.png",
            }
          }
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={Object {}}
    horizontal={true}
    onLayout={[Function]}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {steps} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={Object {}}
    horizontal={true}
    onLayout={[Function]}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {style} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "orange",
        "padding": 20,
      }
    }
    horizontal={true}
    onLayout={[Function]}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=11",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 0
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": 3,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={null}
          >
            <View
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "backgroundColor": "#f4f4f4",
                  "borderRadius": 3,
                  "height": 190,
                  "justifyContent": "center",
                  "opacity": 0.8,
                  "width": 168,
                }
              }
            >
              <Image
                onLoad={[Function]}
                resizeMode="cover"
                source={
                  Object {
                    "uri": "https://picsum.photos/320/200?image=12",
                  }
                }
                style={
                  Object {
                    "borderRadius": 3,
                    "height": 190,
                    "opacity": 0.8,
                    "width": 168,
                  }
                }
              />
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="large"
                style={
                  Object {
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "padding": 10,
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 26,
                      "fontWeight": "bold",
                      "lineHeight": 27.560000000000002,
                      "marginBottom": 5,
                      "textAlign": "center",
                    }
                  }
                >
                  Title 1
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {title} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 18,
          "fontWeight": "bold",
          "lineHeight": 19.080000000000002,
        }
      }
    >
      Hello World
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={Object {}}
    horizontal={true}
    onLayout={[Function]}
    onScroll={undefined}
    scrollEventThrottle={16}
  >
    <View />
  </RCTScrollView>
</View>
`;
